# juce-cmake-helloworld

./: CMakeLists.txt  Makefile  QCProgram.jucer  README.md
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2015/: QCProgram_App.vcxproj  QCProgram_App.vcxproj.filters
Builds/VisualStudio2017/: QCProgram_App.vcxproj  QCProgram_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: CMakeCache.txt  Main.cpp  cmake_install.cmake
Source/Builds/LinuxMakefile/: Makefile
Source/Builds/VisualStudio2015/: QCProgram.sln  QCProgram_App.vcxproj
Source/Builds/VisualStudio2017/: QCProgram.sln  QCProgram_App.vcxproj  QCProgram_App.vcxproj.filters
